tests/baselines/reference/moduleWithNoValuesAsType.errors.txt
tests/cases/compiler/moduleWithNoValuesAsType.ts(2,8): error TS2304: Cannot find name 'A'.
tests/cases/compiler/moduleWithNoValuesAsType.ts(7,8): error TS2304: Cannot find name 'B'.
tests/cases/compiler/moduleWithNoValuesAsType.ts(15,8): error TS2304: Cannot find name 'C'.


==== tests/cases/compiler/moduleWithNoValuesAsType.ts (3 errors) ====
    module A { }
    var a: A; // error
           ~
!!! error TS2304: Cannot find name 'A'.
    
    module B {
        interface I {}
    }
    var b: B; // error
           ~
!!! error TS2304: Cannot find name 'B'.
    
    module C {
        module M {
            interface I {}
        }
    }
    
    var c: C; // error
           ~
!!! error TS2304: Cannot find name 'C'.